packages/app/web/css/ui.css
/* ... */
.repl-result .entity.activations .entity-name {
    margin-left: 2em;
    order: 2;
    font-size: 80%;
    opacity: 0.6;
    flex: 1;
}
.repl-result .activationId {
    font-weight: 500;
}

/* two special session activation list decorations */
.repl-block .repl-result .status {
    padding-top: 0;
    padding-left: 1em;
    order: 5;
}
.repl-result .entity.session.activations .entity-name {
}

.repl-result .activation-duration {
    width: 3em;
    text-align: right;
}

/* grid cells in activation list view */
.repl-result .entity.activations {
    margin: 0.25ex;
}
.repl-result .activation-viz-plugin {
    /* activation grid in activation list vie */
    flex: initial;
    flex-direction: row;
    align-items: center;
    margin-right: 2em;
}
.repl-result .activation-viz-plugin .grid {
    /* activation grid in activation list vie */
    padding: 0 1ex 0 0;
}
.repl-result .activation-viz-plugin .grid .grid-cell {
    /* activation grid in activation list vie */
    border: 1px solid rgba(100,100,100,0.35);
}
.repl-result .activation-result {
    /* activation result in activation list view */
    order: 3;
    margin-left: 2em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    flex: 1;
    transition: all 150ms ease-in-out;
    background: transparent;
}
.repl-result .activation-start-time {
    order: 4;
    padding-left: 1em;
}
.timestamp-same-day {
    /* keep the width, but make it hidden */
    opacity: 0;
}
.sidecar-visible .repl-result.one-column .activation-result, .sidecar-visible .repl-result.one-column .activation-start-time, .sidecar-visible .entity-rule-definition {
    /* hide activation result and start time  in activation list view, when sidecar is open */
    opacity: 0;
    flex: 0 0 0%;
    min-width: 0;
    padding: 0;
    margin: 0;
}


.repl .list-label {
    font-size: 70%;
    opacity: 0.6;
    margin-right: 1ex;
}
.repl-result-prefix, badge {
    font-weight: 400;
    transition: all 150ms ease-in-out;
    font-size: 0.75rem;
    border-radius: 0.9375rem;
    margin: 0.1875rem;
    padding: 0 0.625rem;
    height: 1.5rem;
    line-height: 1.5rem;
    display: inline-flex;
    align-items: center;
}
badge {
    transition: all 450ms ease-in-out;
}
sidecar .sidecar-header badge.version {
    /* badge for action version */
    font-size: 0.75em;
}
i.clickable:hover, badge.clickable:hover {
    /* no underline effect for icons (i) and badges */
    text-decoration: none;
}

.entity.activations.is-sequence-true .repl-result-prefix {
    min-width: 5.5em;
}
.entity .repl-result-prefix {
    height: auto;
    font-size: 0.875em;
    font-weight: 300;
    background: transparent;
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 2em;
    min-width: 6em;
    text-align: right;
    border-radius: 0;
}
.entity .repl-result-prefix, .entity .border-right {
    border-right: 1px solid;
}
.package-prefix {
    display: inline-block;
    vertical-align: middle;
    font-size: 0.75em;
    opacity: 0.6;
}

/* sidecar */
sidecar {
    flex: 0 0 0%;
    min-width: 0;
    transition: all 300ms ease-in-out;
    box-shadow: 0 0 1ex var(--color-ui-02);
    display: flex;
    flex-direction: column;
    overflow-y: hidden;
    background:var(--color-ui-02);
}
sidecar.visible {
    flex: 6;
    z-index: 1; /* float above the repl */
    transition-duration: 600ms; /* a bit slower coming out */
    border-left: 1px solid;
    border-left-color: var(--color-ui-04);
}
body:not(.subwindow) .sidecar-full-screen sidecar.visible:not(.minimized) {
    border-left-color: var(--color-ui-05);
    border-left-style: dotted;
    box-shadow: none;
}
.sidecar-full-screen .repl.sidecar-visible {
    flex: 0 0 0;
    min-width: 0;
}

/* sidecar bottom stripe */
.sidecar-bottom-stripe {
    padding: 0 1em;
    flex-basis: 3rem;
    min-height: 3rem; /* important for screenshot, which tries to maximally squish the sidecar height */
    display: flex;
    align-items: center;
    z-index: 5;
    font-weight: 400;
    -webkit-font-smoothing: antialiased;  /* chrome */
    -moz-osx-font-smoothing: grayscale;   /* firefox */
    font-smoothing: antialiased;
}
sidecar .sidecar-bottom-stripe > div {
    font-size: 0.875em;
}
sidecar .sidecar-bottom-stripe .sidecar-bottom-stripe-left-bits, sidecar .sidecar-bottom-stripe .sidecar-bottom-stripe-left-bits .sidecar-bottom-stripe-button-container {
    /* button container in sidecar bottom stripe */
    flex: 1;
    display: flex;
    align-items: center;
}
sidecar .sidecar-bottom-stripe .sidecar-bottom-stripe-left-bits .sidecar-bottom-stripe-button-container.sidecar-bottom-stripe-back-bits {
    /* back button container in sidecar bottom stripe */
    flex: 0 0 0%;
    min-width: 0;
}
sidecar .sidecar-bottom-stripe .sidecar-bottom-stripe-left-bits .sidecar-bottom-stripe-button-container.sidecar-bottom-stripe-back-bits.has-back-button {
    flex: initial;
    margin-right: 1em;
}
sidecar .sidecar-bottom-stripe .sidecar-bottom-stripe-close {
    text-align: right;
}
sidecar .sidecar-bottom-stripe-close-icon {
    letter-spacing: -1ex;
    opacity: 0.6;
    transition: all 150ms ease-in-out;
}
body.os-win32 sidecar .sidecar-bottom-stripe-close-icon {
    /* dunno why windows is weird here */
    letter-spacing: 0px;
}
sidecar .sidecar-bottom-stripe .sidecar-bottom-stripe-maximize {
    display: flex;

    /* so that the "hidden" maximize button (see opacity:0,width:0 just below)
       doesn't occlude the close button */
    /*overflow: hidden;*/
}
.maximize-button-label, .unmaximize-button-label {
    transition: opacity 300ms ease-in-out;
    display: inline-block;
}
.sidecar-full-screen sidecar .sidecar-bottom-stripe-maximize .maximize-button-label, tab:not(.sidecar-full-screen) sidecar .sidecar-bottom-stripe-maximize .unmaximize-button-label {
    transition: opacity 0ms ease-in-out;
    opacity: 0;
    width: 0;
    height: 0;
}
/* ... */

